--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
     "@mantine/notifications": "^7.10.2",
+    "dotenv": "^16.4.5",
     "eslint-config-prettier": "^9.1.0",
     "next": "14.2.3",
     "react": "^18",
