--- a/package.json
+++ b/package.json
@@ -15,15 +15,13 @@
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
     "@mantine/notifications": "^7.10.2",
-    "@tabler/icons": "^3.6.0",
     "@tabler/icons-react": "^3.6.0",
     "dotenv": "^16.4.5",
     "eslint-config-prettier": "^9.1.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "recoil": "^0.7.7",
-    "tabler": "^1.0.0-alpha.8"
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
