--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "eslint-config-prettier": "^9.1.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
+    "@tabler/icons-react": "^3.7.0",
     "@types/eslint__js": "^8.42.3",
     "@types/fhir": "^0.0.41",
     "@types/lodash": "^4.17.5",
