--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@mantine/code-highlight": "^7.11.1",
     "@mantine/core": "^7.10.1",
+    "@mantine/form": "^7.11.1",
     "@mantine/hooks": "^7.10.1",
+    "@mantine/notifications": "^7.11.1",
     "@tabler/icons-react": "^3.6.0",
     "dotenv": "^16.4.5",
     "eslint-config-prettier": "^9.1.0",
@@ -23,7 +25,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
