--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tabler/icons-react": "^3.6.0",
     "dotenv": "^16.4.5",
     "eslint-config-prettier": "^9.1.0",
+    "fhir-spec-tools": "^0.0.3",
     "filesize": "^10.1.2",
     "ndjson": "^2.0.0",
     "next": "14.2.3",
