--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/dates": "^7.11.2",
     "@mantine/form": "^7.11.1",
     "@mantine/hooks": "^7.10.1",
+    "@mantine/modals": "^7.12.1",
     "@mantine/notifications": "^7.11.1",
     "@tabler/icons-react": "^3.6.0",
     "dayjs": "^1.11.12",
