--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "dependencies": {
     "@mantine/code-highlight": "^7.11.1",
     "@mantine/core": "^7.10.1",
+    "@mantine/dates": "^7.11.2",
     "@mantine/form": "^7.11.1",
     "@mantine/hooks": "^7.10.1",
+    "@mantine/modals": "^7.12.1",
     "@mantine/notifications": "^7.11.1",
     "@tabler/icons-react": "^3.6.0",
+    "dayjs": "^1.11.12",
     "dotenv": "^16.4.5",
     "eslint-config-prettier": "^9.1.0",
-    "fhir-spec-tools": "^0.1.0",
+    "fhir-spec-tools": "^0.2.0",
     "filesize": "^10.1.2",
     "ndjson": "^2.0.0",
     "next": "14.2.3",
