--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "check": "npm run lint && npm run prettier"
   },
   "dependencies": {
-    "@mantine/code-highlight": "^7.11.1",
-    "@mantine/core": "^7.10.1",
-    "@mantine/dates": "^7.11.2",
-    "@mantine/form": "^7.11.1",
-    "@mantine/hooks": "^7.10.1",
-    "@mantine/modals": "^7.12.1",
-    "@mantine/notifications": "^7.11.1",
+    "@mantine/code-highlight": "^7.16.3",
+    "@mantine/core": "^7.16.3",
+    "@mantine/dates": "^7.16.3",
+    "@mantine/dropzone": "^7.16.3",
+    "@mantine/form": "^7.16.3",
+    "@mantine/hooks": "^7.16.3",
+    "@mantine/modals": "^7.16.3",
+    "@mantine/notifications": "^7.16.3",
     "@tabler/icons-react": "^3.6.0",
     "dayjs": "^1.11.12",
     "dotenv": "^16.4.5",
