--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "dayjs": "^1.11.12",
     "dotenv": "^16.4.5",
     "eslint-config-prettier": "^9.1.0",
-    "fhir-spec-tools": "^0.2.0",
+    "fhir-spec-tools": "^0.3.0",
     "filesize": "^10.1.2",
+    "fqm-bulk-utils": "^0.0.1",
     "ndjson": "^2.0.0",
     "next": "14.2.3",
     "react": "^18",
