1599 measure bundle query (#18)
* init

* removed submodule

* integrated group-create branch

* added in bulk utils

* Remove "measure" id handling, add measure recoil state, custom params

Fix double question mark

* removed .gitmodules + cleaned measure file up file

* added more robust error handling

* updated try catch

* not populating content if group or querytext is default

* fixed loading bug

* changes for lauren

* fix for elsa

* Update src/util/exportRequestBuilder.ts

Co-authored-by: lmd59 <lmd59@cornell.edu>

* &

* Update src/util/exportRequestBuilder.ts

Co-authored-by: lmd59 <lmd59@cornell.edu>

* make it pretty

---------

Co-authored-by: LaurenD <laurend@mitre.org>
Co-authored-by: lmd59 <lmd59@cornell.edu>

--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
     "check": "npm run lint && npm run prettier"
   },
   "dependencies": {
-    "@mantine/code-highlight": "^7.11.1",
-    "@mantine/core": "^7.10.1",
-    "@mantine/dates": "^7.11.2",
-    "@mantine/form": "^7.11.1",
-    "@mantine/hooks": "^7.10.1",
-    "@mantine/modals": "^7.12.1",
-    "@mantine/notifications": "^7.11.1",
+    "@mantine/code-highlight": "^7.16.3",
+    "@mantine/core": "^7.16.3",
+    "@mantine/dates": "^7.16.3",
+    "@mantine/dropzone": "^7.16.3",
+    "@mantine/form": "^7.16.3",
+    "@mantine/hooks": "^7.16.3",
+    "@mantine/modals": "^7.16.3",
+    "@mantine/notifications": "^7.16.3",
     "@tabler/icons-react": "^3.6.0",
     "dayjs": "^1.11.12",
     "dotenv": "^16.4.5",
     "eslint-config-prettier": "^9.1.0",
-    "fhir-spec-tools": "^0.2.0",
+    "fhir-spec-tools": "^0.3.0",
     "filesize": "^10.1.2",
+    "fqm-bulk-utils": "^0.0.1",
     "ndjson": "^2.0.0",
     "next": "14.2.3",
     "react": "^18",
